--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,20 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+        
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+        # Ignore the failure of a step and avoid terminating the job.
+        continue-on-error: true
+        
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Checkout loconotion
+        env:
+          URL: "${{ secrets.notionurl }}"
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          git clone git@github.com:leoncvlt/loconotion.git loconotion
+          cd loconotion
+          docker-compose build loconotion
+          LOCONOTION_LOCAL_DIST=./dist docker-compose run loconotion $URL 
+          ls -al ./dist
+      
+
