--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,16 @@ jobs:
         env:
           URL: "${{ secrets.notionurl }}"
         run: |
+          cd ..
           git clone https://github.com/leoncvlt/loconotion.git loconotion
           cd loconotion
           docker-compose build loconotion
           LOCONOTION_LOCAL_DIST=./dist docker-compose run loconotion $URL 
           ls -al ./dist
+          cp dist dist/tradinglogic/* wiki/docs
+      - uses: mikeal/publish-to-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_NAME: 'main'
       
 
