--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,8 @@ jobs:
           cd loconotion
           docker-compose build loconotion
           LOCONOTION_LOCAL_DIST=./dist docker-compose run loconotion $URL 
-          ls -al ./dist
-          cp dist dist/tradinglogic/* ../wiki/docs
+          tree ./dist
+          cp dist/tradinglogic/* ../wiki/docs
       - uses: mikeal/publish-to-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
