--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,12 @@ jobs:
           docker-compose build loconotion
           LOCONOTION_LOCAL_DIST=./dist docker-compose run loconotion $URL 
           tree ./dist
-          cp dist/tradinglogic/* ../wiki/docs
-      - uses: mikeal/publish-to-github-action@master
-        env:
+          cp dist/tradinglogic/* ../wiki/_site
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH_NAME: 'main'
-      
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: _site # The folder the action should deploy.
+          CLEAN: true # Automatically remove deleted files from the deploy branch
 
