--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: WIKI
 
 # Controls when the action will run. 
 on:
@@ -39,7 +39,7 @@ jobs:
           cd ..
           git clone https://github.com/leoncvlt/loconotion.git loconotion
           cd loconotion
-          cp -r ../wiki/template ./dist
+          cp -r ../wiki/template/ ./dist/
           docker-compose build loconotion
           LOCONOTION_LOCAL_DIST=./dist docker-compose run loconotion ./dist/template/wiki.toml
           tree ./dist
