--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           git clone https://github.com/leoncvlt/loconotion.git loconotion
           cd loconotion
           mkdir -p ./dist/template
-          cp -r ../wiki/template/ ./dist/template
+          cp -r ../wiki/template/* ./dist/template/
           docker-compose build loconotion
           LOCONOTION_LOCAL_DIST=./dist docker-compose run loconotion ./dist/template/wiki.toml
           tree ./dist
